# py-clean

./: LICENSE  README.md  pyproject.toml
src/py_clean/: main.py
src/py_clean/configs/: __init__.py
src/py_clean/routes/: __init__.py
src/py_clean/routes/v1/: hello_world.py
src/py_clean/schema/: __init__.py
